# python_init

./: .devcontainer.json  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pythonapp.yml
ex1/: triangle.py  triangle_h_test.py  triangle_test.py
largest_repeat/: repeat.py  repeat_test.py
mean_distances/: dist.py  dist_test.py
new_excercies/descending_order/: desc.py  desc_test.py
new_excercies/digital_root/: droot.py  root_test.py
new_excercies/disemvowels/: disvow.py  disvow_test.py
new_excercies/equal_sides_of_array/: even_index.py  even_index_test.py
new_excercies/find_the_odd_int/: find_odd.py  find_odd_test.py
new_excercies/four_letter_friend/: find_friend.py  friend_test.py
new_excercies/perfect_square/: square.py  square_test.py
numbers/: number.py  number_test.py
triangles/: triangle.py  triangle_h_test.py  triangle_test.py
triangles/triangles/: triangle.py  triangle_h_test.py  triangle_test.py
