[tool.poetry]
name = "python_init"
version = "0.1.0"
description = "python exercises"
authors = ["Pablo Fernandez <fernandezpablo85@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pre-commit = "^2.3.0"
pytest = "^5.4.1"
hypothesis = "^5.10.3"
flake8 = "^3.7.9"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
